# tee-solver

./: Cargo.toml  README.md  makefile
.github/workflows/: bulid.yml
contracts/intents-vault/: Cargo.toml
contracts/intents-vault/res/: intents_vault.wasm
contracts/intents-vault/src/: lib.rs
contracts/mock-ft/: Cargo.toml
contracts/mock-ft/res/: mock_ft.wasm
contracts/mock-ft/src/: lib.rs
contracts/mock-intents/: Cargo.toml
contracts/mock-intents/res/: mock_intents.wasm
contracts/mock-intents/src/: lib.rs  token_receiver.rs
contracts/solver-registry/: Cargo.toml  README.md
contracts/solver-registry/res/: solver_registry.wasm
contracts/solver-registry/src/: admin.rs  collateral.rs  events.rs  lib.rs  pool.rs  token_receiver.rs  types.rs  view.rs
contracts/solver-registry/src/attestation/: README.md  attestation.rs  hash.rs  measurements.rs  mod.rs  report_data.rs
contracts/solver-registry/src/attestation/assets/: tcb_info.json
contracts/solver-registry/src/ext/: ft.rs  intents_vault.rs  mod.rs
contracts/solver-registry/tests/: test_basics.rs  test_register_worker.rs  test_single_active_worker.rs  utils.rs
contracts/solver-registry/tests/common/: constants.rs  utils.rs
contracts/solver-registry/tests/samples/alice/: quote_collateral.json  tcb_info.json
contracts/solver-registry/tests/samples/bob/: tcb_info.json
scripts/mainnet/: create-pool-0.sh  create-pool-1.sh  create-pool.sh  deploy.sh  worker.sh
scripts/testnet/: create-pool.sh  deploy.sh  worker.sh
server/: .env.example  .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
server/src/: index.ts
server/src/config/: env.ts  index.ts  mainnet.ts  testnet.ts  types.ts
server/src/near/: intents.ts  solver-registry.ts  utils.ts
server/src/phala/: cvms.ts
server/src/phala/api/: client.ts  constants.ts  cvms.ts  types.ts
server/src/phala/utils/: credentials.ts
server/src/tasks/: deploy-solvers.ts  setup-auth.ts
server/src/utils/: logger.ts
