[package]
name = "solver-registry"
description = "NEAR Intents TEE Solver Registry"
version = "0.1.0"
edition = "2021"
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/Near-One/tee-solver/tree/main/contracts/solver-registry"

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.14.1-rust-1.86.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:eaac91be3119cc7c136b6f375f2d3e092001f717ed6151ccc9d5348c2d6a640c"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] }
near-sdk = "5.15.1"
dcap-qvl = { version = "0.3.2", default-features = false, features=["contract", "borsh", "std"] }
derive_more = { version = "2.0.1", features = [
    "from",
    "deref",
    "into",
    "as_ref",
    "constructor",
] }
# Latest `master` as per 2025-09-02
dstack-sdk-types = { features = ["borsh"], git = "https://github.com/Dstack-TEE/dstack.git", rev = "c9840bbd1562cab6763add2c6eba1ab16267e5cc" }
k256 = "0.13.4"
hex = "0.4.3"
schemars = "0.8.22" # This version needs to be exactly the same as in `near_sdk::schemars`
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.12"
tracing = "0.1.40"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["custom"] }

[dev-dependencies]
near-sdk = { version = "5.15.1", features = ["unit-testing"] }
near-contract-standards = "5.15.1"
tokio = "1.44.1"
anyhow = "1.0.97"
near-workspaces = { version = "0.20.1", features = ["unstable"]}
near-gas = "0.3.0"
rand = "0.8.5"

[features]
abi = [
    "borsh/unstable__schema",
    "dcap-qvl/borsh_schema",
    "dstack-sdk-types/borsh_schema",
]
